# aoc23

./: .gitignore
jj/: CMakeLists.txt
jj/day01/: build.sh  main.cpp
jj/day02/: CMakeLists.txt  main.cpp
jj/day03/: CMakeLists.txt  input  main.cpp
jj/day04/: CMakeLists.txt  main.cpp
jj/day05/: main.cpp
jj/day06/: day06.py
jj/day07/: day07.go
jj/day08/: _main.go  conc_main.go  conc_test.go
jj/day09/: main.go
